# Spike3D

./: .cursorindexingignore  .env  .favorites_2022-12-23-backup.json  .gitignore  .polyscope.ini  2021-09-30-PhoPy3DPositionAnalysis.ipynb  2021-10-02-PhoPy3DPositionAnalysis-ipygany.ipynb  2021-11-01-PhoPy3DPositionAnalysis-ipygany.ipynb  2021-11-10-PhoPy3DBapunPositionAnalysis.ipynb  2021-11-12-PhoPy3DBapunPositionAnalysis.ipynb  2021-11-15-PhoPy3DBapunPositionAnalysis.ipynb  2021-11-22-PhoPy3DKamranPositionAnalysis.ipynb  2021-11-26-PhoPy3DKamranPositionAnalysis.ipynb  2021-11-28-PhoPy3DBapunPositionAnalysis.ipynb  2021-11-29-PhoPy3DBapunPositionAnalysis.ipynb  2021-11-30-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-06-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-07-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-09-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-11-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-14-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-20-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-21-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-23-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-24-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-27-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-29-PhoPy3DKamranPositionAnalysis.ipynb  2021-12-30-PhoPy3DBapunPositionAnalysis.ipynb  2021-12-30-PhoPy3DCommonPipeline.ipynb  2023-05-26_poetry_show_Greatlakes.md  AGENT.md  AdvancedDictionaryClassExploration.ipynb  BatchGenerateOutputs_2023-05-02.ipynb  BatchGenerateOutputs_2023-05-12.ipynb  BatchGenerateOutputs_2023-05-17.ipynb  BatchGenerateOutputs_2023-05-18_HOME.ipynb  BatchGenerateOutputs_2023-05-23.ipynb  BatchGenerateOutputs_2023-05-27.ipynb  BatchGenerateOutputs_2023-05-30.ipynb  BatchGenerateOutputs_2023-05-31.ipynb  (+1543 more)
.devcontainer/: devcontainer.json
.dvc/: config
BatchGenerateOutupts-lab-baks/: BatchGenerateOutupts-2022-12-07-bak.ipynb  BatchGenerateOutupts-2022-12-07-lab.ipynb
Environment/: phoviz_ultimate_2023_01_23.yml  phoviz_ultimate_env.yml
LibrariesExamples/: DibaRecordXmlLoading.ipynb  Evaluating alive-progress Library.ipynb  Evaluating-qthread-matplotlib.py  MultithreadingTesting.ipynb  PhoBuildOverlayImage.py  PyBursts.ipynb  PythonLanguageServer.py  pltEditorTool Testing Notebook.ipynb
PhoGui/: PhoCustomVtkWidgets.py  __init__.py  general_helpers.py  general_parameters.py
PhoPositionalData/: debug_helpers.py  import_data.py  load_exported.py  plot_data.py  process_data.py
PhoPyPlaceCellReplayAnalysis/: Pho_BuzakiData.ipynb  README.md
PyQtPlotExamples/: PyQtPlot_EXAMPLES.py  PyQtPlot_ParameterTree_Example.py  PyQtPlot_ParameterTree_Filter.py  SimpleScatterPlot.py  _buildFilterParamTypes.py  _filter_paramtreecfg.py  pyqtgraph_2d_plotter_widget.py  pyqtgraph_LinearTransformationViz.py  pyqtgraph_animated3Dplot.py  pyqtgraph_spherical_3d.py  pyqtgraph_x_y_axis_AxisItem.py  pyqtgraphstack.py  pyqtplot_x_y_axis_ViewBox.py
SCRATCH/: 2023-01-02 - Symlink Helper.ipynb  2023-03-05 - Symlink Helper.ipynb  2023-05-23 - FindSavedPipelineOutputs.ipynb  2023-05-26_poetry_show.md  2023-09-21-PyQCodeNote.md  2023-09-21_jupyter_widget_playground.ipynb  2023-10-11_TrackPlottingPlayground.ipynb  2023-11-13 - Programmatic ipynb Processing.ipynb  2023-11-15_BatchNotebookExport.py  2023-12-08 - InteractiveRasterPlotter.ipynb  2023-12-11 - FindSavedPipelineOutputs.ipynb  2023_07_05-ImportantNotes.md  2024-01-02 - Matplotlib Figure Sizer.ipynb  2024-01-05 - Marginal Merged Directional PseduoPf2D Figures.ipynb  2024-01-08 - Batch Run Progress Tracker.ipynb  2024-01-17 - Across Session Marginal Merged CSV Exports.ipynb  2024-01-23 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-01-29 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-02-06 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-02-14 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-02-19 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-02-20 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-02-22 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-03-02 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-03-04 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-03-05 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-03-05 - Clipboard Helpers.ipynb  2024-03-05 - Exception Handling and Formatting.ipynb  2024-03-14 - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-03-14 - Across Session Point and YellowBlue Marginal CSV Exports_GL.ipynb  2024-03-15- Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-03-19- Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-03-20- Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-03-21- Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-03-27- Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-04-02- Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-04-09- Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-04-15- Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-04-16_rMBP - Across Session Point and YellowBlue Marginal CSV Exports.ipynb  2024-04-20 - silx_RadonTransformTesting.ipynb  (+83 more)
SCRIPTS/: pull_all_subworkspaces.sh
TaskNotebooks/: TaskNB_PhoDibaPaper2023_Figures_2023-06-29.ipynb
VtkGeneralTesting/: Untitled.ipynb  Untitled1.ipynb  VTKSlicer.ipynb  VtkGenEx_MultiLine2DText.ipynb  VtkGenEx_SihouettePickedActor.ipynb
data/: .gitignore  2024-09-23_bad_sessions_table.csv  2024-09-23_good_sessions_table.csv  2024-11-20_full_merged_stats_properties_all_sessions_ripple_time_bin_df.csv.dvc  2024-12-31_p_x_given_n.npy.dvc  Install_Instructions  batch_progress_df_2023-05-17.csv  dataframe_filter_data.hdf5.dvc  long_2D_projected_results_obj_decoder_direct_save_2023-04-06.pkl.npy.dvc  rate_remapping_df.csv  rate_remapping_df.csv.dvc  sessions_experiment_datetime_df.csv  test_parameters-neuropy_bayesian_prob_2023-04-07.npz.dvc
(+451 files in other folders)
