[tool.poetry]
name = "spike3d"
version = "0.3.1"
description = "Primary 3D Analysis Package"
authors = ["Pho Hale <halechr@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.2,<3.9.7 || >3.9.7,<3.10"
numba = "^0.56.4"
pyvista = "^0.36.1"
pyvistaqt = "^0.9.0"
loguru = "^0.6.0" # required for mpl-multitab
pyopengl = "^3.1.6"
qtawesome = "^1.2.2"
wrapt = "1.11.2"
mpl-multitab = {git = "https://github.com/CommanderPho/mpl-multitab.git", rev = "main"} # poetry add git+https://github.com/CommanderPho/mpl-multitab.git
ansi2html = {git = "https://github.com/CommanderPho/ansi2html.git", rev = "main"} # poetry add git+https://github.com/CommanderPho/ansi2html.git
vedo = {git = "https://github.com/CommanderPho/vedo.git", rev = "release/pho-working"} # poetry add git+https://github.com/CommanderPho/vedo.git#release/pho-working
pybursts = {git = "https://github.com/CommanderPho/pybursts.git", rev = "master"}
qdarkstyle = "^3.1"
hdf5plugin = "^4.1.1"
mplcursors = "^0.5.2"
pyqt-custom-titlebar-window = "^0.0.50"
pyqt5custom = "^1.0.1"
matplotlib = "^3.7.0"
numexpr = "^2.8.4"
scipy = "^1.10.1"
dill = {version="==0.3.5.1", extras=["graph"]} #objgraph diagnostic tool
pyqt5 = "^5.15.7"
pyqt5-qt5 = "5.15.2" # ^5.15.2
qtconsole = "^5.4.0"
ipython = "^8.11.0"
attrs = "^22.2.0"
cattrs = "^23.1.2"
pillow = "^9.4.0"
seaborn = {extras = ["stats"], version = "^0.12.2"}
param = "^1.13.0"
pyflakes = "^3.0.1" # required for code editor
neptune = "^1.2.0"
nptyping = {extras = ["complete"], version = "^2.5.0"} # allows specifying Numpy and Pandas types and shapes
beartype = "^0.14.0" # for strict type enforcement of function calls
awkward = "^2.2.1" # for ragged-arrays, testing
pyqt-checkbox-table-widget = "^0.0.14"
patchworklib = "^0.6.1" # matplotlib figure layout/organization
flexitext = {git = "https://github.com/CommanderPho/flexitext.git", rev = "main"}
adjusttext = "^1.1.1"
seaborn-image = "^0.6.0"
mpl-interactions = {extras = ["jupyter"], version = "^0.23.1"}
matplotlib-aximgcache = "^0.1.0"
matplotlib-extract = "^0.1.2"
click-man = "^0.4.1"
tikzplotlib = "^0.10.1"
mpl-sizes = "^0.0.2"
lovelyplots = "^0.0.26"
mknotebooks = "^0.7.1"
python-markdown-math = "^0.8"
desert = "^2022.9.22"
cairosvg = "^2.7.0"
pyqt5singleton = "^0.1"
tables = "^3.8.0"
hvplot = "^0.8.4"
pyviz-comms = "^2.3.2"
objexplore = "^1.6.3"
hdf5storage = "^0.1.19"
vitables = "^3.0.2"
h5glance = "^0.8.1"
versioned-hdf5 = "^1.3.14"
ipytree = "^0.2.2"
tqdm = "^4.65.1"
jinja2 = "3.0.3"
psutil = "^5.9.5"
plotly = "^5.16.1"
ipygany = "^0.5.0"
pyqode-core = {path = "../pyqode.core/dist/current.whl"}
pyqode-python = {path = "../pyqode.python/dist/current.whl"}
jupyter-dash = "^0.4.2"
ipydatagrid = "^1.2.0"
sidecar = "^0.7.0"
glueviz = "^1.2.0"
perspective-python = "^2.5.1"
memory-profiler = "^0.61.0"
vaex = "^4.17.0"
xarray = {extras = ["complete"], version = "^2023.9.0"}
h5netcdf = "^1.2.0"
xarray-datatree = "^0.0.12"
opencv-python = "^4.8.0.76"
pip = "^24.0"
streamlit = "^1.27.1"
streamlit-extras = "^0.3.2"
regex = "^2023.10.3"
panel = "^1.2.3"
params = "^0.9.0"
findpeaks = "^2.5.4"
qtvoila = "^2.1.0"
pyqt-builder = "^1.15.3"
statsmodels = "^0.14.0"
pathos = "^0.2.9"
nbstripout = "^0.6.1"
dash-bootstrap-components = "^1.5.0"
dash-mantine-components = "^0.12.1"
dash = "^2.14.2"
ruptures = "^1.1.9"
maxlikespy = {git = "https://github.com/CommanderPho/maxlikespy"}
mkdocs-matplotlib = "^0.10.1"
pycorrelate = "^0.3"
napari-animation = "^0.0.8"
napari-hdf5-netcdf-viewer = "^0.1.1"
napari-plot-profile = "^0.2.2"
jupyterhub = "^4.0.2"
jupyter-bokeh = "^3.0.7"
jupyter-rfb = "^0.4.1"
jaraco-clipboard = "^3.1.0"
highlight-text = "^0.2"
streamlit-tree-select = "^0.0.5"
structlog = "^24.1.0"
colorama = "^0.4.6"
rich = "^13.7.1"
better-exceptions = "^0.3.3"
pandas = "1.5.3"
joblib = "^1.4.0"
mpldatacursor = "^0.7.1"
fastdtw = "^0.3.4"
lxml = {extras = ["html-clean"], version = "^5.2.1"}
napari = "^0.4.19.post1"
rdp = "^0.8"
kaleido = [
    {platform = "darwin", version = "0.1.0"},
    {platform = "linux", version = "0.1.0"},
    {platform = "win32", version = "0.1.0.post1"}
]
watchdog = "^4.0.1"
poetry-plugin-export = "^1.8.0"
solara = {extras = ["assets"], version = "^1.33.0"}
bottleneck = "^1.4.0"
numbagg = "^0.8.1"
flox = "^0.9.8"
opt-einsum = "^3.3.0"
zarr = "^2.18.2"
fsspec = "^2024.6.1"
ipykernel = "^6.29.5"
numpy-stl = "^3.1.1"
brokenaxes = "^0.6.1"
networkx = {version = "3.2.1", extras = ["default"]}
opencv-contrib-python = "^4.10.0.84"
python-dotenv = "^1.0.1"
#fiftyone = {extras = ["desktop"], version = "^0.24.1"}
scikit-learn = "^1.5"
scikit-image = "^0.24"
pho-jupyter-preview-widget = {path = "../pho_jupyter_preview_widget", develop = true}
#rbeast = "^0.1.21"
virtualenv = "^20.26.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"
viztracer = "^0.15.6"
jupyterlab = "^3.6.1"
dvc = {version = "^2.45.1", extras = ["gdrive"]}
cookiecutter = "^2.5.0"
monkeytype = "^23.3.0"
pyannotate = "^1.2.0"
mypy = "^1.8.0"
libcst = "^1.1.0"
black = "^24.2.0"


[tool.poetry.group.testing.dependencies]
ipywidgets = "^8.0.5"

[tool.poetry.group.remote.dependencies]
neuropy = {path = "../NeuroPy", develop=true}
pyphocorehelpers = {path = "../pyPhoCoreHelpers", develop=true}
pyphoplacecellanalysis = {path = "../pyPhoPlaceCellAnalysis", develop=true}




[tool.poetry.scripts]
pull-changes = "scripts/unix/repos_pull_changes.sh"
launch-jupyter-remote = "scripts/unix/launch_jupyter_lab_with_remote_access.sh"
setup_dependent_repos = 'scripts/setup_dependent_repos.py' # 'scripts.console:run'


# [tool.vulture]
# exclude = [] # "*file*.py", "dir/"
# ignore_decorators = [] # "@app.route", "@require_*"
# ignore_names = [] # "visit_*", "do_*"
# make_whitelist = true
# min_confidence = 80
# paths = ["../NeuroPy", "../pyPhoCoreHelpers", "../pyPhoPlaceCellAnalysis", "../Spike3D"]
# sort_by_size = true
# verbose = true



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
