[project]
name = "spike3d"
version = "0.4.4"
description = "Primary 3D Analysis Package"
authors = [{ name = "Pho Hale", email = "halechr@umich.edu" }]
requires-python = ">=3.9,<3.12"
readme = "README.md"
dependencies = [
    "numba>=0.56.4,<0.57",
    "pyvista>=0.36.1,<0.37",
    "pyvistaqt>=0.9.0,<0.10",
    "loguru>=0.6.0,<0.7",
    "pyopengl>=3.1.6,<4",
    "qtawesome>=1.2.2,<2",
    "wrapt==1.11.2",
    "mpl-multitab",
    "ansi2html",
    "vedo",
    "pybursts",
    "qdarkstyle~=3.1",
    "hdf5plugin>=4.1.1,<5",
    "mplcursors>=0.5.2,<0.6",
    "pyqt-custom-titlebar-window>=0.0.50,<0.0.51",
    "pyqt5custom>=1.0.1,<2",
    "matplotlib==3.8.4",
    "numexpr>=2.8.4,<3",
    "scipy>=1.10.1,<2",
    "dill[graph]==0.3.5.1",
    "pyqt5>=5.15.7,<6",
    "pyqt5-qt5==5.15.2",
    "qtconsole>=5.4.0,<6",
    "ipython>=8.11.0,<9",
    "attrs>=22.2.0,<23",
    "cattrs>=23.1.2,<24",
    "pillow>=9.4.0,<10",
    "seaborn[stats]>=0.12.2,<0.13",
    "param>=1.13.0,<2",
    "pyflakes>=3.0.1,<4",
    "neptune>=1.2.0,<2",
    "nptyping[complete]>=2.5.0,<3",
    "awkward>=2.2.1,<3",
    "pyqt-checkbox-table-widget>=0.0.14,<0.0.15",
    "patchworklib>=0.6.1,<0.7",
    "flexitext",
    "adjusttext>=1.1.1,<2",
    "seaborn-image>=0.6.0,<0.7",
    "mpl-interactions[jupyter]>=0.23.1,<0.24",
    "matplotlib-aximgcache>=0.1.0,<0.2",
    "matplotlib-extract>=0.1.2,<0.2",
    "click-man>=0.4.1,<0.5",
    "tikzplotlib>=0.10.1,<0.11",
    "mpl-sizes>=0.0.2,<0.0.3",
    "lovelyplots>=0.0.26,<0.0.27",
    "mknotebooks>=0.7.1,<0.8",
    "python-markdown-math>=0.8,<0.9",
    "desert>=2022.9.22,<2023",
    "cairosvg>=2.7.0,<3",
    "pyqt5singleton>=0.1,<0.2",
    "tables>=3.8.0,<4",
    "hvplot>=0.8.4,<0.9",
    "pyviz-comms>=2.3.2,<3",
    "objexplore>=1.6.3,<2",
    "hdf5storage>=0.1.19,<0.2",
    "h5glance>=0.8.1,<0.9",
    "ipytree>=0.2.2,<0.3",
    "tqdm>=4.65.1,<5",
    "jinja2==3.0.3",
    "psutil>=5.9.5,<6",
    "plotly>=5.24.1,<6",
    "ipygany>=0.5.0,<0.6",
    "jupyter-dash>=0.4.2,<0.5",
    "ipydatagrid>=1.2.0,<2",
    "sidecar>=0.7.0,<0.8",
    "glueviz>=1.2.0,<2",
    "perspective-python>=2.5.1,<3",
    "memory-profiler>=0.61.0,<0.62",
    "vaex>=4.17.0,<5",
    "xarray[complete]>=2023.9.0,<2024",
    "h5netcdf>=1.2.0,<2",
    "xarray-datatree>=0.0.12,<0.0.13",
    "pip~=24.0",
    "streamlit>=1.27.1,<2",
    "streamlit-extras>=0.3.2,<0.4",
    "regex>=2023.10.3,<2024",
    "panel>=1.2.3,<2",
    "params>=0.9.0,<0.10",
    "findpeaks>=2.5.4,<3",
    "qtvoila>=2.1.0,<3 ; sys_platform != 'linux'",
    "pyqt-builder>=1.15.3,<2",
    "statsmodels>=0.14.0,<0.15",
    "pathos>=0.2.9,<0.3",
    "nbstripout>=0.6.1,<0.7",
    "dash-bootstrap-components>=1.5.0,<2",
    "dash-mantine-components>=0.12.1,<0.13",
    "dash>=2.14.2,<3",
    "ruptures>=1.1.9,<2",
    "mkdocs-matplotlib>=0.10.1,<0.11",
    "pycorrelate>=0.3,<0.4",
    "napari-animation>=0.0.8,<0.0.9",
    "napari-hdf5-netcdf-viewer>=0.1.1,<0.2",
    "napari-plot-profile>=0.2.2,<0.3",
    "jupyterhub>=4.0.2,<5",
    "jupyter-bokeh>=3.0.7,<4",
    "jupyter-rfb>=0.4.1,<0.5",
    "jaraco-clipboard>=3.1.0,<4",
    "highlight-text>=0.2,<0.3",
    "streamlit-tree-select>=0.0.5,<0.0.6",
    "structlog>=24.1.0,<25",
    "colorama>=0.4.6,<0.5",
    "rich>=13.7.1,<14",
    "better-exceptions>=0.3.3,<0.4",
    "pandas==1.5.3",
    "joblib>=1.4.0,<2",
    "mpldatacursor>=0.7.1,<0.8",
    "fastdtw>=0.3.4,<0.4",
    "lxml[html-clean]>=5.2.1,<6",
    "napari>=0.4.19.post1,<0.5",
    "rdp>=0.8,<0.9",
    "kaleido==0.1.0 ; sys_platform == 'darwin'",
    "kaleido==0.1.0 ; sys_platform == 'linux'",
    "kaleido==0.1.0.post1 ; sys_platform == 'win32'",
    "watchdog>=4.0.1,<5",
    "solara[assets]>=1.33.0,<2",
    "bottleneck>=1.4.0,<2",
    "numbagg>=0.8.1,<0.9",
    "flox>=0.9.8,<0.10",
    "opt-einsum>=3.3.0,<4",
    "zarr>=2.18.2,<3",
    "fsspec>=2024.6.1,<2025",
    "ipykernel>=6.29.5,<7",
    "numpy-stl>=3.1.1,<4",
    "brokenaxes>=0.6.1,<0.7",
    "networkx[default]==3.2.1",
    "python-dotenv>=1.0.1,<2",
    "scikit-learn~=1.5",
    "scikit-image>=0.24,<0.25",
    "virtualenv>=20.26.3,<21",
    "jupyter-book>=1.0.2,<2",
    "opencv-contrib-python>=4.10.0.84,<5",
    "pdf2image>=1.17.0,<2",
    "cython>=3.0.11,<4",
    "ipyflex>=0.3.1,<0.4",
    "neo==0.13.2",
    "silx>=2.2.0,<3",
    "ipyevents>=2.0.2,<3",
    "vitables==3.0.2",
    "pyjson5>=1.6.8,<2",
    "sklearn-utils>=0.0.15",
    "wheel>=0.45.1",
    "setuptools>=78.1.0,<81",
    "pygwalker>=0.4.9.15",
    "ipylab>=1.0.0",
    "ipywidgets>=8.1.6",
    "venn>=0.1.3",
    "importlib-resources>=6.5.2",
    "pypdf>=5.7.0",
    "viztracer>=0.15.6",
    "umap-learn>=0.5.9.post2",
    "neuropy",
    "pyphocorehelpers",
    "pyphoplacecellanalysis",
    "traja[all]>=25.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-jupyter>=0.24.8",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings>=0.24.3",
    "shapely>=2.0.7",
    "pymanopt>=2.2.1",
    "autograd>=1.8.0",
    "pot>=0.9.6.post1",
    "pydoctor>=25.10.1",
    "gputools>=0.2.16",
    "spimagine>=0.2.6",
    "pyopencl>=2025.1",
    "scikit-tensor-py3>=0.2.1",
    "datoviz>=0.3.2",
    "datashader>=0.17.0",
    "ipyvtklink>=0.2.2",
]

[project.scripts]
pull-changes = "scripts/unix/repos_pull_changes.sh"
launch-jupyter-remote = "scripts/unix/launch_jupyter_lab_with_remote_access.sh"
setup_dependent_repos = "scripts/setup_dependent_repos.py"
rebuild_typestubs_and_requirements = "scripts/windows/export_requirements_and_create_typestubs.ps1"

[dependency-groups]
dev = [
    "ipython>=8.9.0,<9",
    "viztracer>=0.15.6,<0.16",
    "jupyterlab>=3.6.1,<4",
    "dvc[gdrive]>=3.59.0,<4",
    "cookiecutter>=2.5.0,<3",
    "monkeytype>=23.3.0,<24",
    "pyannotate>=1.2.0,<2",
    "mypy>=1.8.0,<2",
    "libcst>=1.1.0,<2",
    "black>=24.2.0,<25",
    "ghp-import>=2.1.0,<3",
    "jupyter-cache>=1.0.0,<2",
    "jupytext>=1.16.4,<2",
    "qt_style_sheet_inspector",
    "objgraph>=3.6.2,<4",
    "pympler~=1.1",
    "memory-profiler>=0.61.0,<0.62",
    "pyright>=1.1.396,<2",
    "vulture>=2.14",
    "pylustrator",
    "pyqtinspect>=0.4.0",
]
testing = ["ipywidgets>=8.0.5,<9"]
trial = []

[tool.uv]
default-groups = "all"

[tool.uv.sources]
qt_style_sheet_inspector = { git = "https://github.com/CommanderPho/qt_style_sheet_inspector.git", rev = "master" }
pyphocorehelpers = { path = "../pyPhoCoreHelpers", editable = true }
pyphoplacecellanalysis = { path = "../pyPhoPlaceCellAnalysis", editable = true }
mpl-multitab = { git = "https://github.com/CommanderPho/mpl-multitab.git", rev = "pho_compat" }
ansi2html = { git = "https://github.com/CommanderPho/ansi2html.git", rev = "main" }
vedo = { git = "https://github.com/CommanderPho/vedo.git", rev = "release/pho-working" }
pybursts = { git = "https://github.com/CommanderPho/pybursts.git", rev = "master" }
flexitext = { git = "https://github.com/CommanderPho/flexitext.git", rev = "main" }
pylustrator = { git = "https://github.com/CommanderPho/pylustrator.git" }
pyqtinspect = { git = "https://github.com/CommanderPho/PyQtInspect-Open.git" }
neuropy = { path = "../NeuroPy", editable = true }

[tool.poetry.dependencies]
pyjsoncanvas = {develop = true}

